[tool.poetry]
name = "repl_python3_image-bot-2"
version = "0.1.0"
description = ""
authors = ["missduonggoogle <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Discord-Interactions = "^1.2.3"
aiohttp = "^3.8.1"
quart = "^0.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
